@@ -36,6 +36,8 @@
     line.  A colon on a subsequent line won't trigger definition extraction.
     Issue #103, see also
     http://blade.nagaokaut.ac.jp/cgi-bin/scat.rb/ruby/ruby-core/42942
+  * Fixed :stopdoc: for class A::B where A has not been seen.  Issue #95 by
+    Ryan Davis
 
 * Major enhancements
   * ri can now show pages (README, etc.)
